# v4l2_camera

./: CMakeLists.txt  README.md
config/: compiler.cmake  format.cmake
doc/: v4l2loopback_and_dmabuf.md
src/: CMakeLists.txt
src/common/: capture_device_mmap.cc  capture_device_mmap.h  drm_prime_dmabuf.cc  drm_prime_dmabuf.h  output_device_dmabuf.cc  output_device_dmabuf.h  output_device_mmap.cc  output_device_mmap.h  sdl2_video_renderer.cc  sdl2_video_renderer.h  v4l2_device.h  v4l2_utils.cc  v4l2_utils.h
src/sdl2_renderer/: CMakeLists.txt  README.md  main.cc
src/v4l2_clone_device/: CMakeLists.txt  README.md  main.cc
src/v4l2_info/: CMakeLists.txt  README.md  main.cc
src/v4l2_player/: CMakeLists.txt  README.md  main.cc
